force-app/main/default/objects/RD_ControlPlanDetail__c/RD_ControlPlanDetail__c.object-meta.xml
<CustomObject>
    <label>RD ControlPlanDetail</label>
    <nameField>
        <label>RD ControlPlanDetail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ControlPlanDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>