force-app/main/default/objects/RD_ControlPlanDetail__c/fields/CATEGORY_ID__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY_ID__c</fullName>
    <label>CATEGORY_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>