force-app/main/default/objects/RD_ControlPlanDetail__c/fields/INNER_MIN__c.field-meta.xml
<CustomField>
    <fullName>INNER_MIN__c</fullName>
    <label>INNER_MIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>