force-app/main/default/objects/RD_ControlPlanDetail__c/fields/NOMINAL_VALUE__c.field-meta.xml
<CustomField>
    <fullName>NOMINAL_VALUE__c</fullName>
    <label>NOMINAL VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>