force-app/main/default/objects/RD_ControlPlanDetail__c/fields/NORM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>NORM_TYPE__c</fullName>
    <label>NORM_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>