force-app/main/default/objects/RD_ControlPlanDetail__c/fields/NumVal6__c.field-meta.xml
<CustomField>
    <fullName>NumVal6__c</fullName>
    <label>NumVal6</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>