force-app/main/default/objects/RD_ControlPlanDetail__c/fields/Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Operation_Number__c</fullName>
    <label>Operation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>