force-app/main/default/objects/RD_ControlPlanDetail__c/fields/OUTER_MAX__c.field-meta.xml
<CustomField>
    <fullName>OUTER_MAX__c</fullName>
    <label>OUTER_MAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>