force-app/main/default/objects/RD_ControlPlanDetail__c/fields/SAMPLE_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>SAMPLE_PERCENT__c</fullName>
    <label>SAMPLE_PERCENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>