force-app/main/default/objects/RD_ControlPlanDetail__c/fields/Text8Val__c.field-meta.xml
<CustomField>
    <fullName>Text8Val__c</fullName>
    <label>Text8Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>