force-app/main/default/objects/RD_ControlPlanDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Point__c</columns>
    <columns>Test_OPNO__c</columns>
    <columns>OUTER_MIN__c</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>Text4Val__c</columns>
    <columns>Text5Val__c</columns>
    <columns>Text6Val__c</columns>
    <columns>OUTER_MAX__c</columns>
    <columns>Tool_ID__c</columns>
    <columns>NORM_TYPE__c</columns>
    <columns>DATA_TYPE__c</columns>
    <columns>Special_Characteristic_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>